--- a/exercicio1/exercicio1.html
+++ b/exercicio1/exercicio1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício 1</title>
+    <title>Exercício 1 - teste commit</title>
 </head>
 <body>
     <h1>Conteúdo do curso</h1>
